k8s/base/openwebui/service.yml
apiVersion: v1
kind: Service
metadata:
  name: openwebui
  namespace: openwebui-system
spec:
  selector:
    app: openwebui
  ports:
    - port: 8080
      targetPort: http
